@@ -14,6 +14,9 @@ cdebconf (0.76) UNRELEASED; urgency=low
         The new code is smaller, a bit faster, and simpler, but the
         important thing is that it does not clobber $@. The old version
         messed up $@ if parameters contained spaces.
+    - Add config instances for the standard debconf databases in /target, so
+      that we can do 'debconf-copydb -p foo/bar configdb target_configdb'
+      once the base system is installed.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 19 Apr 2005 14:45:09 +1000
 
